Sensor controller eklendi,Database bağlandı,Sensorhub eklendi,Fakesensorcontroller eklendi.

--- a/IoT_Sensor_Monitoring_Web_App/appsettings.json
+++ b/IoT_Sensor_Monitoring_Web_App/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;port=3306;database=IoTSensorMonitoringDb;user=root;password=pass123;"
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IoTSensorMonitoringDb;Trusted_Connection=True;TrustServerCertificate=True;"
     },
 
     "Logging": {
